# storked

./: Cargo.toml  LICENSE
clnt/: Cargo.toml  Web.toml
clnt/src/: .main.rs.swp  .renderer.js.swp  main.rs  renderer.js
clnt/static/: index.html
comn/: Cargo.toml
comn/src/: .lib.rs.swp  dead.rs  lib.rs
comn/src/art/: mod.rs  player_anim.rs
comn/src/controls/: .movement.rs.swp  mod.rs  movement.rs
comn/src/item/: mod.rs
comn/src/phys/: .mod.rs.swp  mod.rs
serv/: Cargo.toml
serv/src/: .main.rs.swp  main.rs  movement.rs  pickup.rs
serv/src/net/: .login.rs.swp  connection_manager.rs  login.rs  mod.rs  packets.rs  phys.rs
