[package]
name = "clnt"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comn = { path = "../comn" }
stdweb = "0.4.20"
serde = { version = "1.0.102", features = ["derive"] }

# math/ecs (have to use the non-parallel versions of these, WASM sucks like that)
specs = { version = "0.15.1", features = ["specs-derive", "stdweb"], default-features = false }
