[package]
name = "clnt"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["stdweb-logger"]

[dependencies]
comn = { path = "../comn" }
stdweb = "0.4.20"

# logging
stdweb-logger = { version = "0.1.1", optional = true }
log = "0.4.8"

# math/ecs (have to use the non-parallel versions of these, WASM sucks like that)
specs = { version = "0.15.1", features = ["specs-derive", "stdweb"], default-features = false }

# util
bimap = "0.4.0"
serde = { version = "1.0.102", features = ["derive"] }
