[package]
name = "comn"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# math/ecs
nalgebra = { version = "0.18.0", features = ["serde-serialize"] }
specs = { version = "0.15.0", features = ["specs-derive"], default-features = false }

# serialization
serde = { version = "1.0.102", features = ["derive"] }
rmp-serde = "0.14.0"
enum-iterator = "0.5.0"
